--- a/src/main/java/uiDecoreted/Tenant/CommentPanel.form
+++ b/src/main/java/uiDecoreted/Tenant/CommentPanel.form
@@ -23,11 +23,11 @@
   <SubComponents>
     <Component class="javax.swing.JTextField" name="commentText">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Please enter your comment..."/>
+        <Property name="text" type="java.lang.String" value="Please enter you comment"/>
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="320" y="210" width="490" height="50"/>
+          <AbsoluteConstraints x="270" y="130" width="560" height="180"/>
         </Constraint>
       </Constraints>
     </Component>
@@ -95,13 +95,13 @@
     <Component class="javax.swing.JLabel" name="post">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/images/userLayer/Post.png"/>
+          <Image iconType="3" name="/images/userLayer/Input.png"/>
         </Property>
         <Property name="opaque" type="boolean" value="true"/>
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="284" y="172" width="-1" height="-1"/>
+          <AbsoluteConstraints x="260" y="120" width="580" height="200"/>
         </Constraint>
       </Constraints>
     </Component>
